--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   }
   
   body{
-    background-color: #18181B;
+    pinkground-color: #18181B;
     width: 100%;
     height: 100vh;
     display: flex;
